--- a/Labs/Lab01/19101069_Md_Mahbubur_Rahman_08_Floating_Point_Representation.ipynb
+++ b/Labs/Lab01/19101069_Md_Mahbubur_Rahman_08_Floating_Point_Representation.ipynb
@@ -1,31 +1,4 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "kernelspec": {
-      "display_name": "Python 3",
-      "language": "python",
-      "name": "python3"
-    },
-    "language_info": {
-      "codemirror_mode": {
-        "name": "ipython",
-        "version": 3
-      },
-      "file_extension": ".py",
-      "mimetype": "text/x-python",
-      "name": "python",
-      "nbconvert_exporter": "python",
-      "pygments_lexer": "ipython3",
-      "version": "3.7.4"
-    },
-    "colab": {
-      "name": "19101069_Md. Mahbubur Rahman_08_Floating_Point_Representation.ipynb",
-      "provenance": [],
-      "collapsed_sections": [],
-      "history_visible": true
-    }
-  },
   "cells": [
     {
       "cell_type": "markdown",
@@ -38,16 +11,16 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
         "id": "5xN2aMZ0rAJN"
       },
+      "outputs": [],
       "source": [
         "NAME = \"Md. Mahbubur Rahman\"\n",
         "ID = \"19101069\"\n",
         "SECTION = \"08\""
-      ],
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
@@ -63,6 +36,7 @@
       "metadata": {
         "deletable": false,
         "editable": false,
+        "id": "Io3ii0VArAJO",
         "nbgrader": {
           "cell_type": "markdown",
           "checksum": "7c4e9d0fccc2e8dd26580075f9ceb52d",
@@ -72,8 +46,7 @@
           "schema_version": 3,
           "solution": false,
           "task": false
-        },
-        "id": "Io3ii0VArAJO"
+        }
       },
       "source": [
         "# Floating Point Representation\n",
@@ -127,9 +100,11 @@
     },
     {
       "cell_type": "code",
+      "execution_count": 3,
       "metadata": {
         "deletable": false,
         "editable": false,
+        "id": "qIGtiRs-rAJP",
         "nbgrader": {
           "cell_type": "code",
           "checksum": "ac5f73bdfe958d67ad35fcd7def0142b",
@@ -139,21 +114,21 @@
           "schema_version": 3,
           "solution": false,
           "task": false
-        },
-        "id": "qIGtiRs-rAJP"
+        }
       },
+      "outputs": [],
       "source": [
         "import math\n",
         "import itertools\n",
         "import matplotlib.pyplot as plt"
-      ],
-      "execution_count": 3,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 10,
       "metadata": {
         "deletable": false,
+        "id": "ubVFqV6mrAJP",
         "nbgrader": {
           "cell_type": "code",
           "checksum": "98f9407d030b5a7e7abf8599b885afad",
@@ -163,9 +138,9 @@
           "schema_version": 3,
           "solution": true,
           "task": false
-        },
-        "id": "ubVFqV6mrAJP"
+        }
       },
+      "outputs": [],
       "source": [
         "class Float8():\n",
         "    \n",
@@ -245,15 +220,18 @@
         "        # raise NotImplementedError()\n",
         "        \n",
         "        return val"
-      ],
-      "execution_count": 10,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 11,
       "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
         "deletable": false,
         "editable": false,
+        "id": "dnTMKYNKrAJQ",
         "nbgrader": {
           "cell_type": "code",
           "checksum": "6ca28ff8f98269b69d905fdcd45d338c",
@@ -265,12 +243,17 @@
           "solution": false,
           "task": false
         },
-        "id": "dnTMKYNKrAJQ",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
         "outputId": "0768beb0-e172-4e7b-a5d4-2c7fa98f7cf0"
       },
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "28 out of 28 outputs matched for 8-bit floating points\n"
+          ]
+        }
+      ],
       "source": [
         "'''28 test cases for 8-bit floating points'''\n",
         "import numpy as np\n",
@@ -298,16 +281,6 @@
         "\n",
         "np.testing.assert_equal(np.array(test), np.array(results))\n",
         "print('28 out of 28 outputs matched for 8-bit floating points')"
-      ],
-      "execution_count": 11,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "28 out of 28 outputs matched for 8-bit floating points\n"
-          ]
-        }
       ]
     },
     {
@@ -315,6 +288,7 @@
       "metadata": {
         "deletable": false,
         "editable": false,
+        "id": "D2V7P4eyrAJR",
         "nbgrader": {
           "cell_type": "markdown",
           "checksum": "56c84b861684b011679fc374962c97d8",
@@ -324,8 +298,7 @@
           "schema_version": 3,
           "solution": false,
           "task": false
-        },
-        "id": "D2V7P4eyrAJR"
+        }
       },
       "source": [
         "## 16 Bit Floating Point Representation\n",
@@ -377,8 +350,10 @@
     },
     {
       "cell_type": "code",
+      "execution_count": 26,
       "metadata": {
         "deletable": false,
+        "id": "FEARBhuYrAJS",
         "nbgrader": {
           "cell_type": "code",
           "checksum": "9176054a6507a9547cb18a21136d733e",
@@ -388,9 +363,9 @@
           "schema_version": 3,
           "solution": true,
           "task": false
-        },
-        "id": "FEARBhuYrAJS"
+        }
       },
+      "outputs": [],
       "source": [
         "class Float16():\n",
         "    \n",
@@ -469,15 +444,18 @@
         "        # raise NotImplementedError()\n",
         "\n",
         "        return val"
-      ],
-      "execution_count": 26,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 27,
       "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
         "deletable": false,
         "editable": false,
+        "id": "SpIZzEIyrAJT",
         "nbgrader": {
           "cell_type": "code",
           "checksum": "0c6dcd10e961fa37e25e8cba3164cea1",
@@ -489,12 +467,17 @@
           "solution": false,
           "task": false
         },
-        "id": "SpIZzEIyrAJT",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
         "outputId": "311f265f-3086-462f-805f-2bfdfc18acbf"
       },
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "28 out of 28 outputs matched for 16-bit floating points\n"
+          ]
+        }
+      ],
       "source": [
         "'''28 test cases for 16-bit floating points'''\n",
         "data = [ '0011100000000010', '0100000000000000', '1100000000000000', '0100010000000000',\n",
@@ -520,17 +503,34 @@
         "\n",
         "np.testing.assert_equal(np.array(test), np.array(results))\n",
         "print('28 out of 28 outputs matched for 16-bit floating points')"
-      ],
-      "execution_count": 27,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "28 out of 28 outputs matched for 16-bit floating points\n"
-          ]
-        }
       ]
     }
-  ]
+  ],
+  "metadata": {
+    "colab": {
+      "collapsed_sections": [],
+      "history_visible": true,
+      "name": "19101069_Md. Mahbubur Rahman_08_Floating_Point_Representation.ipynb",
+      "provenance": []
+    },
+    "kernelspec": {
+      "display_name": "Python 3",
+      "language": "python",
+      "name": "python3"
+    },
+    "language_info": {
+      "codemirror_mode": {
+        "name": "ipython",
+        "version": 3
+      },
+      "file_extension": ".py",
+      "mimetype": "text/x-python",
+      "name": "python",
+      "nbconvert_exporter": "python",
+      "pygments_lexer": "ipython3",
+      "version": "3.7.4"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
